[gd_scene load_steps=11 format=2]

[ext_resource path="res://Evil Empire.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Fader.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/TitleBackground.png" type="Texture" id=4]
[ext_resource path="res://Art/Piece.png" type="Texture" id=5]
[ext_resource path="res://Scenes/BackgroundObjectsTitle.tscn" type="PackedScene" id=6]
[ext_resource path="res://TitleScreenBgMusic.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="TitleScreen" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 200.0
margin_top = 100.0
margin_right = 800.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBackground" type="Sprite" parent="MainMenu"]
visible = false
position = Vector2( -200, -100 )
texture = ExtResource( 4 )
centered = false

[node name="Label" type="Label" parent="MainMenu"]
margin_right = 600.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "slay the beat"

[node name="Spacer" type="HBoxContainer" parent="MainMenu"]
margin_top = 109.0
margin_right = 600.0
margin_bottom = 109.0

[node name="Spacer2" type="HBoxContainer" parent="MainMenu"]
margin_top = 113.0
margin_right = 600.0
margin_bottom = 113.0

[node name="Spacer3" type="HBoxContainer" parent="MainMenu"]
margin_top = 117.0
margin_right = 600.0
margin_bottom = 117.0

[node name="Spacer4" type="HBoxContainer" parent="MainMenu"]
margin_top = 121.0
margin_right = 600.0
margin_bottom = 121.0

[node name="Spacer5" type="HBoxContainer" parent="MainMenu"]
margin_top = 125.0
margin_right = 600.0
margin_bottom = 125.0

[node name="Spacer6" type="HBoxContainer" parent="MainMenu"]
margin_top = 129.0
margin_right = 600.0
margin_bottom = 129.0

[node name="Spacer7" type="HBoxContainer" parent="MainMenu"]
margin_top = 133.0
margin_right = 600.0
margin_bottom = 133.0

[node name="Spacer8" type="HBoxContainer" parent="MainMenu"]
margin_top = 137.0
margin_right = 600.0
margin_bottom = 137.0

[node name="Spacer9" type="HBoxContainer" parent="MainMenu"]
margin_top = 141.0
margin_right = 600.0
margin_bottom = 141.0

[node name="Spacer10" type="HBoxContainer" parent="MainMenu"]
margin_top = 145.0
margin_right = 600.0
margin_bottom = 145.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
margin_top = 149.0
margin_right = 600.0
margin_bottom = 379.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/HBoxContainer"]
margin_right = 218.0
margin_bottom = 230.0
custom_constants/separation = 20

[node name="Play" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_right = 218.0
margin_bottom = 105.0
rect_min_size = Vector2( 201, 105 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Piece" type="Sprite" parent="MainMenu/HBoxContainer/VBoxContainer/Play"]
position = Vector2( 202.35, 51.1234 )
scale = Vector2( 1.08768, 0.53235 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="MainMenu/HBoxContainer/VBoxContainer/Play"]
margin_right = 201.0
margin_bottom = 105.0
theme = SubResource( 3 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Design" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 125.0
margin_right = 218.0
margin_bottom = 230.0
rect_min_size = Vector2( 201, 105 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Piece2" type="Sprite" parent="MainMenu/HBoxContainer/VBoxContainer/Design"]
position = Vector2( 202.35, 51.727 )
scale = Vector2( 1.08768, 0.53235 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="MainMenu/HBoxContainer/VBoxContainer/Design"]
margin_left = 8.0
margin_right = 263.0
margin_bottom = 105.0
theme = SubResource( 3 )
text = "DESIGN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 218.0
margin_bottom = 230.0
rect_min_size = Vector2( 218, 105 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Piece3" type="Sprite" parent="MainMenu/HBoxContainer/VBoxContainer/ExitGame"]
position = Vector2( 202.35, 53.661 )
scale = Vector2( 1.08768, 0.53235 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="MainMenu/HBoxContainer/VBoxContainer/ExitGame"]
margin_left = 9.0
margin_right = 398.0
margin_bottom = 105.0
theme = SubResource( 3 )
text = "EXIT GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongSelect" type="VBoxContainer" parent="."]
visible = false
margin_left = 100.0
margin_top = 50.0
margin_right = 600.0
margin_bottom = 670.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fader" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.107
autoplay = true
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/Design" to="." method="_on_Design_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/ExitGame" to="." method="_on_ExitGame_pressed"]
